[package]
name = "ceramic-rs-did"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libipld = { version = "0.16.0", default-features = false, features = [
    "serde-codec",
] }
libipld-json = { version = "0.16.0", default-features = false, optional = true }
serde_ipld_dagcbor = "0.3.0"
jws = "0.2.8"
jwt-simple = "0.11.7"
libipld-cbor = "0.16.0"
multibase = "0.9.1"
nkeys = "0.3.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
josekit = "0.8.4"
