[package]
name = "ceramic-rs-http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
did-key = "0.2.1"
ceramic-rs-did = {path = "../did"}
reqwest = { version = "0.11.22",features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonpath-rust = "0.3.2"
