[package]
name = "preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ceramic-rs-http-client = {path = "../http-client"}
ceramic-rs-did = {path = "../did"}
did-key = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
base16 = "0.2.1"
